Add Log print settings
I will add Log system

--- a/src/pocketmine/lang/locale/eng.ini
+++ b/src/pocketmine/lang/locale/eng.ini
@@ -375,6 +375,7 @@ invalid_port = Invalid server port
 ram_warning = The RAM is the maximum amount of memory PocketMine-MP will use. A value of 128-256 MB is recommended
 server_ram = Server RAM in MB
 gamemode_info = Choose between Creative (1) or Survival (0)
+log_print = Choose between log Enable (1) or Disable (0)
 default_gamemode = Default Game mode
 max_players = Max. online players
 spawn_protection_info = The spawn protection disallows placing/breaking blocks in the spawn zone except for OPs
