--- a/src/pocketmine/lang/locale/kor.ini
+++ b/src/pocketmine/lang/locale/kor.ini
@@ -372,6 +372,7 @@ invalid_port=잘못된 서버 포트입니다
 ram_warning=RAM은 PocketMine-MP가 사용할 메모리의 크기입니다. 128~256MB를 권장합니다.
 server_ram=서버의 램(RAM) (MB)
 gamemode_info=크리에이티브 (1) 또는 서바이벌 (0) 게임 모드 중 하나를 고르세요.
+log_print=로그 조사 기능을 활성화 시킬 것이면 1 아니면 0을 골라주세요.
 default_gamemode=기본 게임 모드
 max_players=최대 동시 접속 인원수
 spawn_protection_info=스폰 보호는 OP를 제외한 사용자들이 스폰 지역 근처에서 블록을 놓거나 부수는 것을 방지합니다.
